implemented the meta description tag for search engine optimisation(SEO)

--- a/Task_Tracker/index.html
+++ b/Task_Tracker/index.html
@@ -10,6 +10,7 @@
 <link rel="mask-icon" href="/favicon_package/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
+<meta name="description" content="Document and keep track of your tasks using task tracker which helps you stay organised and uses a task ranking system...Learn more">
     <title>Task Tracker</title>
   </head>
   <body>
