updated priority level visual appearance

--- a/Task_Tracker/index.html
+++ b/Task_Tracker/index.html
@@ -13,6 +13,7 @@
     <meta name="description" content="Document and keep track of your tasks using task tracker which helps you stay organised and uses a task ranking system...Learn more">
     <meta name="keywords" content="To-do,Task,Add Tasks">
     <meta name="author" content="Sumaiya Mohamed and Rehumile Sekoto">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Task Tracker</title>
   </head>
   <body>
