--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta name="description" content="Document and keep track of your tasks using task tracker which helps you stay organised and uses a task ranking system...Learn more">
     <meta name="keywords" content="To-do,Task,Add Tasks">
     <meta name="author" content="Sumaiya Mohamed and Rehumile Sekoto">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <title>Task Tracker</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./main.tsx"></script>
   </body>
 </html>
